gui: Fix Updater spinner's vertical alignment (#2195)
The method used to vertically center the spinner displayed in the
Updater window when no download progress information is available is
a Firefox experimental feature which has no effects in Chromium, the
browser used to render Desktop's views.

Besides, this hack was only necessary because the `spin` animation was
redefined in our own CSS because, in turn, we were adding an
unnecessary top margin on the main window's status bar spinner icon.

One fix leading to the other, we now have centered spinners in both
the status bar and the updater window.
We took the opportunity to use the same size for the status bar
spinner as the other status bar icons and to align these with the file
icons displayed below in the Recent tab.

--- a/gui/styles/app.styl
+++ b/gui/styles/app.styl
@@ -4,12 +4,6 @@
 @require './node_modules/cozy-ui/stylus/settings/fontstack.styl'
 @require './node_modules/cozy-ui/stylus/utilities/typography.styl'
 
-@keyframes spin
-  from
-    transform translateY(-50%) rotate(0deg)
-  to
-    transform translateY(-50%) rotate(360deg)
-
 @keyframes rotate
   from
     transform rotate(0deg)
